force-app/main/default/objects/Bed_Allocation__c/Bed_Allocation__c.object-meta.xml
<CustomObject>
    <label>Bed Allocation</label>
    <nameField>
        <label>Bed Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bed Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>