force-app/main/default/objects/Bed_Allocation__c/fields/Actual_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Actual_Checkout__c</fullName>
    <label>Actual Checkout</label>
    <type>Date</type>
</CustomField>