force-app/main/default/objects/Bed_Allocation__c/fields/Bed_Number__c.field-meta.xml
<CustomField>
    <fullName>Bed_Number__c</fullName>
    <label>Bed Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bed 1</fullName>
            </value>
            <value>
                <fullName>Bed 2</fullName>
            </value>
            <value>
                <fullName>Bed 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>