force-app/main/default/objects/Bed_Allocation__c/fields/Expected_Checkout__c.field-meta.xml
<CustomField>
    <fullName>Expected_Checkout__c</fullName>
    <label>Expected Checkout</label>
    <type>Date</type>
</CustomField>