force-app/main/default/objects/Bed_Allocation__c/fields/Hostel__c.field-meta.xml
<CustomField>
    <fullName>Hostel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hostel</label>
    <referenceTo>Hostel__c</referenceTo>
    <relationshipLabel>Bed Allocations</relationshipLabel>
    <relationshipName>Bed_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>